# cgul

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  demo_layout.cgul  imgui.ini
apps/cgul_cli/: main.cpp
apps/cgul_demo_sfml/: glyph_grid_renderer.cpp  glyph_grid_renderer.h  main.cpp
apps/cgul_imgui_demo/: CMakeLists.txt  README.md  main.cpp
apps/cgul_imgui_demo/assets/: cgul_imgui_demo_state.cgul  tilemap.json
apps/cgul_imgui_demo/assets/chunks/gen_20260217_141135/chunks/: demo_chunk_0_0_-8000_-8000.json  demo_chunk_0_100_-8000_-4800.json  demo_chunk_0_125_-8000_-4000.json  demo_chunk_0_150_-8000_-3200.json  demo_chunk_0_175_-8000_-2400.json  demo_chunk_0_200_-8000_-1600.json  demo_chunk_0_225_-8000_-800.json  demo_chunk_0_250_-8000_0.json  demo_chunk_0_25_-8000_-7200.json  demo_chunk_0_275_-8000_800.json  demo_chunk_0_300_-8000_1600.json  demo_chunk_0_325_-8000_2400.json  demo_chunk_0_350_-8000_3200.json  demo_chunk_0_375_-8000_4000.json  demo_chunk_0_400_-8000_4800.json  demo_chunk_0_425_-8000_5600.json  demo_chunk_0_450_-8000_6400.json  demo_chunk_0_475_-8000_7200.json  demo_chunk_0_50_-8000_-6400.json  demo_chunk_0_75_-8000_-5600.json  demo_chunk_100_0_-4800_-8000.json  demo_chunk_100_100_-4800_-4800.json  demo_chunk_100_125_-4800_-4000.json  demo_chunk_100_150_-4800_-3200.json  demo_chunk_100_175_-4800_-2400.json  demo_chunk_100_200_-4800_-1600.json  demo_chunk_100_225_-4800_-800.json  demo_chunk_100_250_-4800_0.json  demo_chunk_100_25_-4800_-7200.json  demo_chunk_100_275_-4800_800.json  demo_chunk_100_300_-4800_1600.json  demo_chunk_100_325_-4800_2400.json  demo_chunk_100_350_-4800_3200.json  demo_chunk_100_375_-4800_4000.json  demo_chunk_100_400_-4800_4800.json  demo_chunk_100_425_-4800_5600.json  demo_chunk_100_450_-4800_6400.json  demo_chunk_100_475_-4800_7200.json  demo_chunk_100_50_-4800_-6400.json  demo_chunk_100_75_-4800_-5600.json  (+360 more)
apps/cgul_imgui_demo/src/app/: DemoPersistence.cpp  DemoPersistence.hpp  Paths.cpp  Paths.hpp
apps/cgul_imgui_demo/src/chunkexporter/tiled/: AtlasTexture.cpp  AtlasTexture.hpp  TiledLayerCodec.cpp  TiledLayerCodec.hpp  TiledMap.cpp  TiledMap.hpp
apps/cgul_imgui_demo/src/chunkexporter/tools/: ChunkExporterTool.cpp  ChunkExporterTool.hpp
apps/cgul_imgui_demo/src/imgui_backends/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
apps/cgul_imgui_demo/src/render/: ArtRenderer.cpp  ArtRenderer.hpp  CalmRenderer.cpp  CalmRenderer.hpp  CgulUiRenderer.cpp  CgulUiRenderer.hpp
apps/cgul_imgui_demo/src/ui/: ChunkExporterPanel.cpp  ChunkExporterPanel.hpp
apps/cgul_imgui_demo/src/world/: WorldState.cpp  WorldState.hpp
apps/cgul_tests_smoke/: main.cpp
docs/: demo_app.md  format_cgul.md  integration.md  roadmap.md  spec.md
include/cgul/core/: equality.h  frame.h
include/cgul/io/: cgul_document.h
include/cgul/render/: layout_composer.h
include/cgul/validate/: validate.h
schemas/examples/: v0_1_minimal.cgul  v0_1_windows.cgul
src/: cgul_document.cpp  equality.cpp  frame.cpp  layout_composer.cpp  validate.cpp
